--- a/debian/rules
+++ b/debian/rules
@@ -7,9 +7,14 @@ clean:
 	rm -f debian/files
 
 binary: build
-	cd application && ../../../../../build/bin/qbuild packages
+	../../../../../build/bin/qbuild packages
 	mkdir -p debian/tmp/opt/qtmoko
-	cd debian/tmp/opt/qtmoko && tar xzvpf ../../../../../../../../../build/src/3rdparty/applications/eyepiece/pkg/*
+	cd poppler && ../../../../../../build/bin/qbuild
+	cd djvuplugin && ../../../../../../build/bin/qbuild
+	cd pdfplugin && ../../../../../../build/bin/qbuild
+	cd application && ../../../../../../build/bin/qbuild packages
+	mkdir -p debian/tmp/opt/qtmoko
+	cd debian/tmp/opt/qtmoko && tar xzvpf ../../../../../../../../../build/src/3rdparty/applications/eyepiece/application/pkg/*
 	cd debian/tmp/opt/qtmoko && tar xzvpf data.tar.gz
 	cd debian/tmp/opt/qtmoko && rm -f control
 	cd debian/tmp/opt/qtmoko && rm -f data.tar.gz
